k8smanifest/ingress/prescripto-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prescripto-app
  name: prescripto-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pavanvarikolu.online
      http:
        paths:
          - pathType: Prefix
            path: /api
            backend:
              service:
                name: backend-service
                port:
                  number: 4000
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
